# Parallel-Operations-Toolkit

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
bench/: bench.cpp  plot_interface.h  plot_results.cpp
cmake/: Catch2.cmake  CompilerFlags.cmake
include/pot/: cache_line.h  concepts.h  executor.h  future.h  global_thread.h  local_thread.h  package_task.h  pot.h  pot_traits.h  promise.h  this_thread.h  when_all.h
include/pot/algorithms/: dot.h  dot_mt.h  dot_simd.h  lfdequeue.h  lfqueue.h  parfor.h  parsections.h  reduce.h
include/pot/allocators/: shared_allocator.h
include/pot/coroutines/: async_barrier.h  async_condition_variable.h  coroutine.h  lock_guard_coro.h  resume_on.h  task.h  task_coroutine.h  when_all.h
include/pot/coroutines/__details/: basic_promise_type.h
include/pot/executors/: executor.h  inline_executor.h  thread_executor.h  thread_pool_executor.h  thread_pool_executor_lfgq.h
include/pot/experimental/: coroutine.h  main.cpp  parfor.h
include/pot/experimental/bench/: bench.h
include/pot/experimental/tasks/: lazy_task.h  task.h
include/pot/experimental/thread_pool/: bench.h  thread_pool_GQ_fpe.h  thread_pool_esu.h  thread_pool_fpe.h  thread_pool_gq_esu.h  thread_pool_ll.h  thread_pool_lq_esu.h  thread_pool_ol.h
include/pot/memory/: coro_memory.h
include/pot/sandbox/: thread_pool_executor.h
include/pot/simd/: simd_auto.h  simd_forced.h  simd_traits.h
include/pot/sync/: async_lock.h  sync_object.h
include/pot/tasks/: big_task.h  lazy_promise.h  lazy_task.h  promise.h  shared_state.h  stack_promise.h  stack_task.h  task.h
include/pot/tasks/impl/: big_shared_state.h  consts.h  lazy_shared_state.h  shared_state.h
include/pot/threads/: global_thread.h  local_thread.h  thread.h
include/pot/traits/: compare.h  concepts.h  guards.h  pot_traits.h
include/pot/utils/: cache_line.h  errors.h  platform.h  progress.h  this_thread.h  time_it.h  unique_function.h
modules/pot/: pot.cppm
modules/pot/algorithms/: dot_simd.cppm  lfqueue.cppm  parfor.cppm
modules/pot/coroutines/: async_condition_variable.cppm  task.cppm  when_all.cppm
modules/pot/executors/: executor.cppm  thread_pool_executor.cppm
modules/pot/simd/: simd_auto.cppm  simd_forced.cppm  simd_traits.cppm
src/: main.cpp  this_thread.cpp
src/executors/: inline_executor.cpp  thread_executor.cpp
src/experimental/thread_pool/: thread_pool_GQ_fpe.cpp  thread_pool_fpe.cpp
src/utils/: this_thread.cpp
test/: CMakeLists.txt  bench_thread_pool_executor.cpp  test_async_cd.cpp  test_async_lock.cpp  test_async_lock_lf.cpp  test_big_task.cpp  test_coro.cpp  test_executor.cpp  test_fill.cpp  test_future.cpp  test_get_bench.cpp  test_inline_executor.cpp  test_lazy_task.cpp  test_parfor.cpp  test_pot.cpp  test_promise.cpp  test_resume_on.cpp  test_speed_executor.cpp  test_stack_task.cpp  test_task.cpp  test_this_thread.cpp  test_thread.cpp  test_thread_pool_fpe.cpp  test_thread_pools_bench.cpp  test_tp_executor_lfgq.cpp  when_all.h
